feat: dark mode (except specific blog page)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@config "../../tailwind.config.ts";
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "@uiw/react-md-editor/markdown-editor.css";
